# s32tar

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/s32tar/: __init__.py  archive.py
tests/: __init__.py  test_archive.py
